feat: microoptimize _generate_revert_map (#2013)

--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -1,6 +1,8 @@
 name: Core Ganache
 on:
   push:
+    branches:
+      - master
     paths:
       - '**.py'
       - '.github/workflows/core-ganache.yaml'
@@ -43,10 +45,25 @@ jobs:
     name: Ganache Core (${{ matrix.python-version }} on ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
+      # we can increase concurrency beyond 9 (3 concurrent runners per-key) but we will need more keys first
+      max-parallel: 9
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10", "3.11", "3.12", "3.13", "3.14", "3.14t"]
-      fail-fast: false
+        include:
+          - python-version: "3.10"
+            infura-key: ddddf0c53f254d36aa76ce4e3a6a390e
+          - python-version: "3.11"
+            infura-key: 1668fecbc9c242d58253476103a42ce9
+          - python-version: "3.12"
+            infura-key: 21317ddb5ded42ce8d40c7d78f90474f
+          - python-version: "3.13"
+            infura-key: ddddf0c53f254d36aa76ce4e3a6a390e
+          - python-version: "3.14"
+            infura-key: 1668fecbc9c242d58253476103a42ce9
+          - python-version: "3.14t"
+            infura-key: 21317ddb5ded42ce8d40c7d78f90474f
 
     steps:
       - uses: actions/checkout@v4
@@ -57,24 +74,12 @@ jobs:
           path: |
             ~/.solcx
             ~/.vvm
+          # this cache is KEY for the tests to work. if it gets deleted we're screwed.
           key: ${{ runner.os }}-compiler-cache
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
 
-      - name: Set Infura Project ID
-        shell: bash
-        run: |
-          if [[ "${{ matrix.python-version }}" == "3.10" || "${{ matrix.python-version }}" == "3.11" ]]; then
-            echo "WEB3_INFURA_PROJECT_ID=ddddf0c53f254d36aa76ce4e3a6a390e" >> $GITHUB_ENV
-          elif [[ "${{ matrix.python-version }}" == "3.12" || "${{ matrix.python-version }}" == "3.13" ]]; then
-            echo "WEB3_INFURA_PROJECT_ID=1668fecbc9c242d58253476103a42ce9" >> $GITHUB_ENV
-          elif [[ "${{ matrix.python-version }}" == "3.14" || "${{ matrix.python-version }}" == "3.14t" ]]; then
-            echo "WEB3_INFURA_PROJECT_ID=21317ddb5ded42ce8d40c7d78f90474f" >> $GITHUB_ENV
-          else
-            echo "ERROR: No Infura Project ID configured for python-version=${{ matrix.python-version }}" >&2
-            exit 1
-          fi
       - name: Install Ganache
         shell: bash
         run: |
@@ -83,6 +88,7 @@ jobs:
           else
             npm install -g ganache@7.9.2
           fi
+        
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -101,8 +107,18 @@ jobs:
       - name: Install Tox
         run: python -m pip install --upgrade tox
 
+      - name: Cache tox environment and hypothesis examples
+        uses: actions/cache@v4
+        with:
+          path: |
+            .tox
+            .hypothesis
+          key: ${{ runner.os }}-tox-${{ matrix.python-version }}-${{ matrix.architecture }}-${{ hashFiles('pyproject.toml', 'setup.py', 'requirements.in', 'requirements.txt', 'requirements-windows.in', 'requirements-windows.txt', 'requirements-dev.in', 'requirements-dev.txt', 'tox.ini') }}
+
       - name: Run Tox
         shell: bash
+        env:
+          WEB3_INFURA_PROJECT_ID: ${{ matrix.infura-key }}
         run: |
           toxenv="py${{ matrix.python-version }}"
           toxenv="${toxenv//./}"
