--- a/.github/workflows/evm.yaml
+++ b/.github/workflows/evm.yaml
@@ -1,4 +1,11 @@
-on: ["push", "pull_request"]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+  schedule:
+    - cron: '0 12 * * *'  # Daily 1200 UTC
+  workflow_dispatch:
 
 name: evm tests
 
@@ -43,9 +50,25 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+        cache: pip
+        cache-dependency-path: |
+          pyproject.toml
+          setup.py
+          requirements.in
+          requirements.txt
+          requirements-windows.in
+          requirements-windows.txt
+          requirements-dev.in
+          requirements-dev.txt
 
     - name: Install Tox
       run: pip install tox
+      
+    - name: Cache tox environment
+      uses: actions/cache@v4
+      with:
+        path: .tox
+        key: ${{ runner.os }}-${{ matrix.job }}-${{ matrix.python-version }}-${{ matrix.architecture }}-${{ hashFiles('pyproject.toml', 'setup.py', 'requirements.in', 'requirements.txt', 'requirements-windows.in', 'requirements-windows.txt', 'requirements-dev.in', 'requirements-dev.txt', 'tox.ini') }}
 
     - name: Run Tox
       run: tox -e ${{ matrix.job }}
