--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ requires = [
     "types-pyyaml",
     "types-requests",
     "types-ujson",
-    "eth-event>=1.4.3,<2",
+	# pydantic-core (installed with faster-eth-utils, which is installed with eth-event) is unable
+    # to build on Python3.14 on 32-bit Linux distros so we exclude it in that one specific case
+	"eth-event>=1.4.3,<2; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
     "eth-typing>=5,<6",
 ]
 
