--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -174,6 +174,7 @@ pytest-cov==6.3.0
     # via -r requirements-dev.in
 pytest-mock==3.15.1
     # via -r requirements-dev.in
+pytest-randomly
 pytokens==0.1.10
     # via
     #   -c requirements.txt
