--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -22,6 +22,12 @@ jobs:
       with:
         python-version: '3.13'
 
+    - name: Cache .mypy_cache
+        uses: actions/cache@v4
+        with:
+          path: .mypy_cache
+          key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
+
     - name: Normalize C files for diffchecking
         # This makes it much easier to diffcheck changes in the C files
         run: |
