--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -123,6 +123,12 @@ jobs:
           toxenv="py${{ matrix.python-version }}"
           toxenv="${toxenv//./}"
           tox -e "$toxenv"
+      
+      - name: Cache .mypy_cache
+        uses: actions/cache@v4
+        with:
+          path: .mypy_cache
+          key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
