--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -23,14 +23,16 @@ jobs:
         python-version: '3.13'
 
     - name: Cache .mypy_cache
-        uses: actions/cache@v4
-        with:
-          path: .mypy_cache
-          key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
+      uses: actions/cache@v4
+      with:
+        path: .mypy_cache
+        key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
+
+    
 
     - name: Normalize C files for diffchecking
         # This makes it much easier to diffcheck changes in the C files
-        run: |
+      run: |
           # Insert DIFFCHECK_PLACEHOLDER macro at the top if not present
           for f in build/*.c; do
             if ! grep -q 'DIFFCHECK_PLACEHOLDER' "$f"; then
@@ -42,8 +44,27 @@ jobs:
           # Replace index in CPyStatics[...] with macro
           sed -i 's/CPyStatics\[[0-9]\+\]/CPyStatics[DIFFCHECK_PLACEHOLDER]/g' build/*.c
 
+    - name: Restore ccache cache
+      id: restore-ccache
+      uses: actions/cache/restore@v4
+      with:
+        path: ~/.ccache
+        key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
+        restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
+
+    - name: Install ccache
+      run: sudo apt-get update && sudo apt-get install -y ccache
+
     - name: Compile
+      env:
+        CC: ccache gcc
       run: pip install .
+
+    - name: Save ccache cache
+      uses: actions/cache/save@v4
+      with:
+        path: ~/.ccache
+        key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
 
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v5
