--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -23,20 +23,21 @@ jobs:
         python-version: '3.13'
 
     - name: Normalize C files for diffchecking
-        # This makes it much easier to diffcheck changes in the C files
+      # This makes it much easier to diffcheck changes in the C files
       run: |
-          # Insert DIFFCHECK_PLACEHOLDER macro at the top if not present
-          for f in build/*.c; do
-            if ! grep -q 'DIFFCHECK_PLACEHOLDER' "$f"; then
-              sed -i '1i#ifndef DIFFCHECK_PLACEHOLDER\n#define DIFFCHECK_PLACEHOLDER 0\n#endif' "$f"
-            fi
-          done
-          # Replace line number in CPy_AddTraceback with macro
-          sed -i 's/\(CPy_AddTraceback([^,]*, *[^,]*, *\)[0-9]\+\(, *[^)]*)\)/\1DIFFCHECK_PLACEHOLDER\2/g' build/*.c
-          # Replace index in CPyStatics[...] with macro
-          sed -i 's/CPyStatics\[[0-9]\+\]/CPyStatics[DIFFCHECK_PLACEHOLDER]/g' build/*.c
+        # Insert DIFFCHECK_PLACEHOLDER macro at the top if not present
+        for f in build/*.c; do
+          if ! grep -q 'DIFFCHECK_PLACEHOLDER' "$f"; then
+            sed -i '1i#ifndef DIFFCHECK_PLACEHOLDER\n#define DIFFCHECK_PLACEHOLDER 0\n#endif' "$f"
+          fi
+        done
+        # Replace line number in CPy_AddTraceback with macro
+        sed -i 's/\(CPy_AddTraceback([^,]*, *[^,]*, *\)[0-9]\+\(, *[^)]*)\)/\1DIFFCHECK_PLACEHOLDER\2/g' build/*.c
+        # Replace index in CPyStatics[...] with macro
+        sed -i 's/CPyStatics\[[0-9]\+\]/CPyStatics[DIFFCHECK_PLACEHOLDER]/g' build/*.c
 
     - name: Restore ccache cache
+      if: ${{ runner.os != 'Windows' }}
       id: restore-ccache
       uses: actions/cache/restore@v4
       with:
@@ -44,7 +45,11 @@ jobs:
         key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
         restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
 
-    - name: Install ccache
+    - name: Install ccache (Linux)
+      if: ${{ runner.os == 'Linux' }}
+      run: sudo apt-get update && sudo apt-get install -y ccache
+    - name: Install ccache (MacOS)
+      if: ${{ runner.os == 'Macos' }}
       run: sudo apt-get update && sudo apt-get install -y ccache
 
     - name: Compile
@@ -53,6 +58,7 @@ jobs:
       run: pip install .
 
     - name: Save ccache cache
+      if: ${{ runner.os != 'Windows' }}
       uses: actions/cache/save@v4
       with:
         path: ~/.ccache
