--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -87,6 +87,22 @@ jobs:
           path: .mypy_cache
           key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
 
+      - name: Restore ccache cache
+        if: runner.os != 'Windows'
+        id: restore-ccache
+        uses: actions/cache/restore@v4
+        with:
+          path: ~/.ccache
+          key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
+          restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
+
+      - name: Install ccache on Linux
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y ccache
+      - name: Install ccache on macOS
+        if: runner.os == 'macOS'
+        run: brew install ccache
+
       - name: Install cibuildwheel
         run: python -m pip install --upgrade pip setuptools wheel cibuildwheel
 
@@ -100,6 +116,8 @@ jobs:
           CIBW_ARCHS_WINDOWS: ${{ matrix.cibw_archs_windows || '' }}
           # Which wheels to build for Linux (manylinux vs. musllinux)
           CIBW_BUILD: ${{ matrix.cibw_build || '' }}
+          # use ccache for speed
+          CC: ccache gcc
         run: python -m cibuildwheel --output-dir wheelhouse
 
       - name: Upload wheels
@@ -107,6 +125,13 @@ jobs:
         with:
           name: ${{ matrix.artifact_name }}
           path: wheelhouse/*.whl
+
+      - name: Save ccache cache
+        if: runner.os != 'Windows'
+        uses: actions/cache/save@v4
+        with:
+          path: ~/.ccache
+          key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
 
   publish_sdist_and_wheels:
     name: Publish wheels to PyPI
@@ -123,29 +148,10 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Restore ccache cache
-        id: restore-ccache
-        uses: actions/cache/restore@v4
-        with:
-          path: ~/.ccache
-          key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
-          restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
-
-      - name: Install ccache
-        run: sudo apt-get update && sudo apt-get install -y ccache
-
       - name: Install dependencies
-        env:
-           CC: ccache gcc
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine mypy[mypyc]==1.18.2 pony-stubs types-cachetools types-python-dateutil types-requests
-
-      - name: Save ccache cache
-        uses: actions/cache/save@v4
-        with:
-          path: ~/.ccache
-          key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
 
       - name: Build sdist
         run: python setup.py sdist
