--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -40,7 +40,7 @@ jobs:
       id: restore-ccache
       uses: actions/cache/restore@v4
       with:
-        path: ~/.ccache
+        path: ~/.cache/ccache
         key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
         restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
 
