--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -64,6 +64,10 @@ jobs:
             infura-key: 1668fecbc9c242d58253476103a42ce9
           - python-version: "3.14t"
             infura-key: 21317ddb5ded42ce8d40c7d78f90474f
+          - os: ubuntu-latest
+            ccache-dir: ~/.cache/ccache
+          - os: macos-latest
+            ccache-dir: /Users/runner/Library/Caches/ccache
 
     steps:
       - uses: actions/checkout@v4
@@ -108,7 +112,7 @@ jobs:
         id: restore-ccache
         uses: actions/cache/restore@v4
         with:
-          path: ~/.ccache
+          path: ${{ matrix.ccache-dir }}
           key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
           restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
 
@@ -123,7 +127,7 @@ jobs:
       - name: Save ccache cache
         uses: actions/cache/save@v4
         with:
-          path: ~/.ccache
+          path: ${{ matrix.ccache-dir }}
           key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
 
       - name: Cache tox environment and hypothesis examples
