--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -51,6 +51,15 @@ jobs:
           requirements-dev.in
           requirements-dev.txt
 
+    - name: Install Tox
+      run: pip install tox
+      
+    - name: Cache tox environment
+      uses: actions/cache@v4
+      with:
+        path: .tox
+        key: ${{ runner.os }}-${{ matrix.job }}-${{ matrix.python-version }}-${{ matrix.architecture }}-${{ hashFiles('pyproject.toml', 'setup.py', 'requirements.in', 'requirements.txt', 'requirements-windows.in', 'requirements-windows.txt', 'requirements-dev.in', 'requirements-dev.txt', 'tox.ini') }}
+
     - name: Restore ccache cache
       id: restore-ccache
       uses: actions/cache/restore@v4
@@ -62,23 +71,14 @@ jobs:
     - name: Install ccache
       run: sudo apt-get update && sudo apt-get install -y ccache
 
-    - name: Install Tox
+    - name: Run Tox
       env:
           CC: ccache gcc
-      run: pip install tox
+      run: tox -e ${{ matrix.job }}
+      continue-on-error: ${{ matrix.experimental }}
 
     - name: Save ccache cache
       uses: actions/cache/save@v4
       with:
-        path: ~/.ccache
+        path: ${{ matrix.ccache-dir }}
         key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
-      
-    - name: Cache tox environment
-      uses: actions/cache@v4
-      with:
-        path: .tox
-        key: ${{ runner.os }}-${{ matrix.job }}-${{ matrix.python-version }}-${{ matrix.architecture }}-${{ hashFiles('pyproject.toml', 'setup.py', 'requirements.in', 'requirements.txt', 'requirements-windows.in', 'requirements-windows.txt', 'requirements-dev.in', 'requirements-dev.txt', 'tox.ini') }}
-
-    - name: Run Tox
-      run: tox -e ${{ matrix.job }}
-      continue-on-error: ${{ matrix.experimental }}
