--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -64,7 +64,7 @@ jobs:
       id: restore-ccache
       uses: actions/cache/restore@v4
       with:
-        path: ~/.ccache
+        path: ~/.cache/ccache
         key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
         restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
 
@@ -80,5 +80,5 @@ jobs:
     - name: Save ccache cache
       uses: actions/cache/save@v4
       with:
-        path: ${{ matrix.ccache-dir }}
+        path: ~/.cache/ccache
         key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
