--- a/.github/workflows/evm.yaml
+++ b/.github/workflows/evm.yaml
@@ -76,7 +76,7 @@ jobs:
       with:
         path: ~/.cache/ccache
         key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
-        restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
+        restore-keys: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
 
     - name: Install ccache
       run: sudo apt-get update && sudo apt-get install -y ccache
