--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -126,7 +126,7 @@ jobs:
         with:
           path: ${{ matrix.ccache-dir }}
           key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
-          restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
+          restore-keys: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
 
       - name: Install ccache (Linux)
         if: runner.os == 'Linux'
