--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -46,9 +46,9 @@ jobs:
       id: restore-ccache
       uses: actions/cache/restore@v4
       with:
-        path: ~/.ccache
+        path: ~/.cache/ccache
         key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
-        restore-key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
+        restore-keys: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
 
     - name: Install ccache
       run: sudo apt-get update && sudo apt-get install -y ccache
