--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -81,19 +81,30 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Cache .mypy_cache
+        uses: actions/cache@v4
+        with:
+          path: .mypy_cache
+          key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
+
       - name: Install cibuildwheel
         run: python -m pip install --upgrade pip setuptools wheel cibuildwheel
 
       - name: Restore ccache cache
         id: restore-ccache
+        if: runner.os != 'Windows'
         uses: actions/cache/restore@v4
         with:
           path: ~/.cache/ccache
           key: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-${{ hashFiles('**/*.h', '**/*.c', '**/*.py') }}
           restore-keys: ccache-${{ runner.os }}-${{ hashFiles('setup.py', 'pyproject.toml') }}-
 
-      - name: Install ccache
+      - name: Install ccache (Linux)
+        if: runner.os == 'Linux'
         run: sudo apt-get update && sudo apt-get install -y ccache
+      - name: Install ccache (MacOS)
+        if: runner.os == 'MacOS'
+        run: brew install ccache
 
       - name: Build wheels
         env:
@@ -116,6 +127,7 @@ jobs:
           path: wheelhouse/*.whl
 
       - name: Save ccache cache
+        if: runner.os != 'Windows'
         uses: actions/cache/save@v4
         with:
           path: ~/.cache/ccache
