--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.13.0
+aiohttp==3.13.1
     # via web3
 aiosignal==1.4.0
     # via aiohttp
@@ -35,7 +35,7 @@ cchecksum==0.3.3
     #   faster-eth-utils
 certifi==2025.10.5
     # via requests
-charset-normalizer==3.4.3
+charset-normalizer==3.4.4
     # via requests
 ckzg==2.1.5
     # via eth-account
@@ -47,12 +47,13 @@ cytoolz==1.0.1
     #   faster-eth-utils
 dataclassy==0.11.1
     # via eip712
-eip712==0.2.13
+eip712==0.2.14
     # via -r requirements.in
 eth-abi==5.2.0
     # via
     #   eip712
     #   eth-account
+    #   faster-eth-abi
     #   web3
 eth-account==0.13.7
     # via
@@ -95,15 +96,16 @@ eth-utils==5.3.1
     #   eth-keyfile
     #   eth-keys
     #   eth-rlp
+    #   faster-eth-utils
     #   rlp
     #   web3
 execnet==2.1.1
     # via pytest-xdist
-faster-eth-abi==5.2.11
+faster-eth-abi==5.2.12
     # via
     #   -r requirements.in
     #   eth-event
-faster-eth-utils==5.3.10
+faster-eth-utils==5.3.11
     # via
     #   -r requirements.in
     #   faster-eth-abi
@@ -173,7 +175,7 @@ propcache==0.4.1
     # via
     #   aiohttp
     #   yarl
-protobuf==6.32.1
+protobuf==6.33.0
     # via web3
 psutil==5.9.8
     # via -r requirements.in
@@ -191,12 +193,12 @@ pycryptodome==3.23.0
     #   eth-hash
     #   eth-keyfile
     #   vyper
-pydantic==2.12.1
+pydantic==2.12.3
     # via
     #   eth-account
     #   eth-utils
     #   faster-eth-utils
-pydantic-core==2.41.3
+pydantic-core==2.41.4
     # via pydantic
 pygments==2.19.2
     # via
@@ -215,7 +217,7 @@ pytest-xdist==1.34.0
     # via -r requirements.in
 python-dotenv==0.16.0
     # via -r requirements.in
-pytokens==0.1.10
+pytokens==0.2.0
     # via black
 pyunormalize==17.0.0
     # via web3
@@ -254,7 +256,7 @@ sortedcontainers==2.4.0
     # via hypothesis
 toml==0.10.2
     # via pytest
-toolz==1.0.0
+toolz==1.1.0
     # via cytoolz
 tqdm==4.67.1
     # via -r requirements.in
