--- a/.github/workflows/pip-compile.yaml
+++ b/.github/workflows/pip-compile.yaml
@@ -53,6 +53,9 @@ jobs:
         pip install -U types-PyYAML
         pip install -r requirements.txt
 
+    - name: Delete existing build files
+      run: rm -rf build
+      
     - name: Compile
       run: pip install .
     
