--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -53,6 +53,9 @@ jobs:
     - name: Install ccache
       run: sudo apt-get update && sudo apt-get install -y ccache
 
+    - name: Delete old build files
+      run: rm -rf build
+      
     - name: Compile
       env:
         CC: ccache gcc
