--- a/.github/workflows/pip-compile.yaml
+++ b/.github/workflows/pip-compile.yaml
@@ -55,6 +55,20 @@ jobs:
 
     - name: Compile
       run: pip install .
+        
+    - name: Normalize C files for diffchecking
+      # This makes it much easier to diffcheck changes in the C files
+      run: |
+        # Insert DIFFCHECK_PLACEHOLDER macro at the top if not present
+        for f in build/*.c; do
+          if ! grep -q 'DIFFCHECK_PLACEHOLDER' "$f"; then
+            sed -i '1i#ifndef DIFFCHECK_PLACEHOLDER\n#define DIFFCHECK_PLACEHOLDER 0\n#endif' "$f"
+          fi
+        done
+        # Replace line number in CPy_AddTraceback with macro
+        sed -i 's/\(CPy_AddTraceback([^,]*, *[^,]*, *\)[0-9]\+\(, *[^)]*)\)/\1DIFFCHECK_PLACEHOLDER\2/g' build/*.c
+        # Replace index in CPyStatics[...] with macro
+        sed -i 's/CPyStatics\[[0-9]\+\]/CPyStatics[DIFFCHECK_PLACEHOLDER]/g' build/*.c
     
     - name: Check for changes
       id: changes
