--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires = [
 	"eth-event>=1.4.3,<2; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
     "eth-typing>=5,<6",
     "faster-hexbytes==1.3.3",
+    "prompt-toolkit==3.0.52",
 ]
 
 
