--- a/.github/workflows/repo-chores.yaml
+++ b/.github/workflows/repo-chores.yaml
@@ -40,13 +40,13 @@ jobs:
       run: pip install pip-tools
       
     - name: Run Pip Compile
-      run: pip-compile -U
+      run: pip-compile -U --no-strip-extras
 
     - name: Run Pip Compile for Windows
-      run: pip-compile -U requirements-windows.in
+      run: pip-compile -U requirements-windows.in --no-strip-extras
 
     - name: Run Pip Compile for Dev Deps
-      run: pip-compile -U requirements-dev.in
+      run: pip-compile -U requirements-dev.in --no-strip-extras
 
     - name: Compile
       run: pip install .
