--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires = [
 	"eth-event==1.4.4; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
     "eth-typing==5.2.1",
     "faster-eth-abi==5.2.12; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
+    "faster-eth-utils==5.3.16; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
     "faster-hexbytes==1.3.3",
     "prompt-toolkit==3.0.52",
 ]
