--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -4,7 +4,17 @@ on:
   push:
     branches:
       - master
-      
+    paths:
+      - '**.py'
+      - '.github/workflows/black.yaml'
+  pull_request:
+    branches:
+      - master
+    paths:
+      - '**.py'
+      - '.github/workflows/black.yaml'
+    
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -12,6 +22,10 @@ concurrency:
 jobs:
   format:
     runs-on: ubuntu-latest
+    env:
+      PUSH_TO: master
+      COMMIT_MSG: "chore: run black formatter `black .`"
+      PR_BODY: "This PR was created automatically by GitHub Actions in response to recent changes on ${{ env.PUSH_TO }} branch."
 
     steps:
     - name: Checkout code
@@ -28,11 +42,31 @@ jobs:
     - name: Run black .
       run: black .
 
+    - name: Check for Black changes
+      id: black_diff
+      run: |
+        if ! git diff --quiet; then
+          echo "changed=true" >> $GITHUB_OUTPUT
+        else
+          echo "changed=false" >> $GITHUB_OUTPUT
+        fi
+
+    - name: Try push changes directly to base branch if not a fork
+      if: steps.black_diff.outputs.changed == 'true' && github.event.repository.fork == false
+      id: try_push
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add .
+        git commit -m "${{ env.COMMIT_MSG }}" || exit 0
+        git push origin HEAD:${{ env.PUSH_TO }} || echo "push_failed=true" >> $GITHUB_OUTPUT
+
     - name: Create Pull Request
+      if: steps.black_diff.outputs.changed == 'true' && (github.event.repository.fork == true || steps.try_push.outputs.push_failed == 'true')
       uses: peter-evans/create-pull-request@v5
       with:
         branch: black-formatter-auto
-        base: master
-        title: "chore: run black formatter `black .`"
-        body: "This PR was created automatically by GitHub Actions in response to recent changes on master branch."
-        commit-message: "chore: run black formatter `black .`"
+        base: ${{ env.PUSH_TO }}
+        title: ${{ env.COMMIT_MSG }}
+        body: ${{ env.PR_BODY }}
+        commit-message: ${{ env.COMMIT_MSG }}
