--- a/.github/workflows/repo-chores.yaml
+++ b/.github/workflows/repo-chores.yaml
@@ -30,12 +30,6 @@ jobs:
         path: .mypy_cache
         key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
 
-    - name: Install Black
-      run: pip install black
-
-    - name: Run black .
-      run: black .
-
     - name: Install Pip Tools
       run: pip install pip-tools
       
@@ -76,11 +70,12 @@ jobs:
         else
           echo "changes_detected=false" >> $GITHUB_ENV
         fi
+    
     - name: Commit changes
       if: env.changes_detected == 'true'
       run: |
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add .
-        git commit -m "chore: \`black .\` and \`pip-compile\` and compile C files for source control"
+        git commit -m "chore: \`pip-compile\` and compile C files for source control"
         git push
