--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -88,7 +88,7 @@ jobs:
           key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
 
       - name: Install cibuildwheel
-        run: python -m pip install --upgrade pip setuptools wheel cibuildwheel
+        run: python -m pip install --upgrade pip setuptools wheel cibuildwheel packaging==23.2
 
       - name: Restore ccache cache
         id: restore-ccache
