--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -88,7 +88,7 @@ jobs:
           key: mypy-cache-${{ runner.os }}-${{ hashFiles('**/*.py', 'pyproject.toml') }}
 
       - name: Install cibuildwheel
-        run: python -m pip install --upgrade pip setuptools wheel cibuildwheel packaging==23.2
+        run: python -m pip install --upgrade pip setuptools wheel cibuildwheel
 
       - name: Restore ccache cache
         id: restore-ccache
@@ -118,6 +118,8 @@ jobs:
           CIBW_BUILD: ${{ matrix.cibw_build || '' }}
           # use ccache for speed
           CC: ccache gcc
+          # Force packaging==23.2 inside the build environment
+          CIBW_BEFORE_BUILD: "pip install packaging==23.2"
         run: python -m cibuildwheel --output-dir wheelhouse
 
       - name: Upload wheels
