--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,9 @@ requires = [
     "prompt-toolkit==3.0.52",
 	"py-solc-ast==1.2.10",
 	"py-solc-x==1.1.1",
-    "vvm==0.2.1",
-    "vyper==0.4.3",
+	# There is failure to resolve "packaging" on MacOS and Windows
+    "vvm==0.2.1; platform_system == 'Linux'",
+    "vyper==0.4.3; platform_system == 'Linux'",
     "websockets==15.0.1",
 ]
 
