--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ requires = [
     "types-requests",
     "types-ujson",
     "eip712==0.2.14",
-	# pydantic-core (installed with faster-eth-utils, which is installed with eth-event) is unable
-    # to build on Python3.14 on 32-bit Linux distros so we exclude it in that one specific case
     "eth-account==0.13.7",
+	# pydantic-core (installed with faster-eth-utils, which is installed with web3.py and eth-event) is unable
+    # to build on Python3.14 on 32-bit Linux distros so we exclude it in that one specific case
 	"eth-event==1.4.5; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
     "eth-keys==0.7.0",
     "eth-typing==5.2.1",
@@ -23,6 +23,7 @@ requires = [
     "vvm==0.2.1; platform_system == 'Linux'",
     "vyper==0.4.3; platform_system == 'Linux'",
     "websockets==15.0.1",
+    "web3==6.11.0; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
 ]
 
 # Brownie configuration for Black.
