--- a/.github/workflows/evm.yaml
+++ b/.github/workflows/evm.yaml
@@ -109,7 +109,7 @@ jobs:
         name: ${{ needs.build-wheel.outputs.artifact-name }}
 
     - name: Run Tox with prebuilt wheel
-      run: python -m tox run -e ${{ matrix.job }} --installpkg=${{ needs.build-wheel.outputs.artifact-name }}
+      run: python -m tox run -e ${{ matrix.job }} --installpkg=$(find . -name '*.whl')
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
