chore: disable flake8 error code E226

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ current_version = 1.22.0
 [flake8]
 exclude = tests/data/*
 max-line-length = 100
-ignore = E203,E704,W503
+ignore = E203,E704,W503,E226
 
 [tool:isort]
 force_grid_wrap = 0
