--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -1,4 +1,4 @@
-name: Black Formatter
+name: Lint
 
 on:
   push:
@@ -6,21 +6,59 @@ on:
       - master
     paths:
       - '**.py'
-      - '.github/workflows/black.yaml'
+      - '.github/workflows/lint.yaml'
   pull_request:
     branches:
       - master
     paths:
       - '**.py'
-      - '.github/workflows/black.yaml'
+      - '.github/workflows/lint.yaml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  format:
+  pyupgrade:
     runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v6
+      with:
+        ref: ${{ github.head_ref }}  # Check out the PR branch
+
+    - name: Set up Python
+      uses: actions/setup-python@v6
+      with:
+        python-version: '3.12'
+
+    - name: Install PyUpgrade
+      run: pip install pyupgrade
+
+    - name: Run PyUpgrade
+      run: find . -name '*.py' -exec pyupgrade --py310-plus --exit-zero-even-if-changed {} +
+
+    - name: Check for changes
+      id: changes
+      run: |
+        if [[ -n $(git status --porcelain) ]]; then
+          echo "changes_detected=true" >> $GITHUB_ENV
+        else
+          echo "changes_detected=false" >> $GITHUB_ENV
+        fi
+
+    - name: Commit changes
+      if: env.changes_detected == 'true'
+      run: |
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git add .
+        git commit -m "chore: run \`pyupgrade\` for Python3.10"
+        git push
+      
+  black:
+    runs-on: ubuntu-latest
+    needs: pyupgrade
     env:
       PUSH_TO: master
       COMMIT_MSG: "chore: run black formatter `black .`"
